CSS: increase z-index of TOC to avoid overflow
without this fix math and code would be visible in menu bar. increased value of z-index for TOC should avoid that.

--- a/resources/html.css
+++ b/resources/html.css
@@ -29,6 +29,7 @@ div.column {
     height: 100%;
     position: fixed;
     overflow: auto;
+    z-index: 999999;
 }
 #TOC ul {
     list-style-type: none;
